--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "create-md": "bin.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "files": [
     "bin.js",
