--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kne/md-doc",
   "description": "转换readme.md文件",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "index.js",
   "bin": {
     "create-md": "bin.js"
@@ -25,6 +25,6 @@
   "author": "linzp",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^7.0.1"
+    "sass": "^1.75.0"
   }
 }
