--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "create-md": "bin.js"
   },
   "scripts": {
-    "test": ""
+    "init": "husky",
+    "test": "",
+    "prettier": "prettier --config .prettierrc --write '{libs/**/*,index}.{js,jsx,ts,tsx,json,css,scss}'",
+    "lint-staged": "npx lint-staged"
+  },
+  "lint-staged": {
+    "{libs/**/*,index}.{js,jsx,ts,tsx,json,css,scss}": [
+      "prettier --config .prettierrc --write",
+      "git add"
+    ]
   },
   "files": [
     "bin.js",
@@ -25,6 +34,8 @@
   "author": "linzp",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5"
   }
 }
